# tetris

./: .gitignore  Cargo.toml  README.md  build.sh  custom.js  index.html  macroquad.js
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yml
src/: cache.rs  config.rs  dummy.rs  dummy_board.rs  font.rs  game.rs  input.rs  level.rs  lib.rs  main.rs  renderer.rs  screen.rs  state.rs  storage.rs  tetromino.rs
