[package]
name = "blocks"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce parallel code generation units
strip = true      # Strip symbols
panic = 'abort'   # Remove panic unwinding
debug = false     # No debug symbols

[dependencies]
macroquad = "0.4"
