[package]
name = "blocks"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3     # Max speed optimization
lto = "fat"       # More aggressive LTO
codegen-units = 1 # Reduce parallel code generation units
strip = true      # Strip symbols
panic = 'abort'   # Remove panic unwinding
debug = false     # No debug symbols

[dependencies]
macroquad = "0.4"
